# aitinkerers_hackathon

./: main.ipynb  pyproject.toml  replicate_inference.py
